--- a/linux-note.org
+++ b/linux-note.org
@@ -8,6 +8,41 @@
 #+end_src
 
 
+* pstree 查看进程树
+
+~pstree -ap | grep mysql/redis ...~
+
+在emacs中的shell运行pstree.
+#+begin_src
+sun@Salted-PC:saltedf.github.io [main] $ pstree -ap | grep emacs
+
+  |           `-emacs,65 -nw .
+  |               |   |-grep,217 --color=auto emacs
+  |               `-{emacs},66
+
+#+end_src
+
+
+* strace 追踪程序的系统调用
+用于debug和理解程序的流程.
+
+#+begin_src bash
+strace -f -s 65535 -i -t -T  -p <pid>    -o 输出文件 
+#+end_src
+
+有时候会输出大量信息, 根本无法分析, 若只是需要特定的系统调用,可以使用 ~-e trace=~ 进行过滤, 如:负责读取/接收这类的系统调用.
+ 
+~-e trace=recvfrom,read,recv,recvmsg~
+
+#+begin_src 
+strace -f -s 65535 -i -t -T -e trace=write,sendto,send  -p <PID> 
+#+end_src
+
+
+
+代码分析组合拳: strace看关键调用. ==> 用calltree找出关键系统调用的调用关系. ==>用IDE细看这条调用链 
+
+
 * 配置apt软件源
 
 
@@ -71,7 +106,6 @@ chown -R sun:sun ./dir
 
 
 * makefile
-
 ** 定义变量
 
 
@@ -206,16 +240,252 @@ OBJS = $(patsubset %.c,%.o,${SRC} )
 
 * GDB
 
-gef
+gef/cgdb/emacs gdb-many-windows
+
+** 为可执行文件设置环境变量
+set environment FOO = XX 
+unset environment FOO
+
+** 为可执行程序传参
+
+进入gdb shell后: 
+1. run arg1 arg2 ...
+
+
+2. set args arg1 arg2 arg3 
+
+启动gdb时通过命令行传参:
+
+3. gdb ./main --args ./main a1 a2 a3 ...
+这种方式需要额外再写一次可执行文件的路径.
 
 
 
 
+** 显示某文件源代码
 
-以某函数定义为中心,显示源代码
+ #+begin_src bash
+ l / list <函数> 
+ #+end_src
 
-#+begin_src bash
-l / list <函数> 
+ 默认显示10行
+
+
+ 当有多个文件时, 为了显示其中一个文件要在文件名后加 ~:N~ , 否则会被视作函数名. 
+ #+begin_src
+ list myfile.cc:1
+ #+end_src
+
+
+
+** 添加断点
+
+ 用break可以添加断点, 既能在指定行上添加, 也能为指定函数添加断点.(经常用在一行中有多个函数时)
+
+ #+begin_src gdb
+ break myfile.cc:100
+ =====================
+ break myfunc
+ #+end_src
+
+** 查看断点
+显示了断点是否被禁用, 以及断点打在何处. 每个断点都有一个ID, 对断点的操作都基于此ID
+#+begin_src 
+
+(gdb) info breakpoints
+Num     Type           Disp Enb Address            What
+1       breakpoint     keep y   0x0000000000408d60 in test_scanner_hello_Test::TestBody() at /home/sun/src/my_compiler/mytest/test_scanner.cc:10
 #+end_src
 
-默认显示10行
+** 禁用断点
+
+#+begin_src gdb
+(gdb) disable breakpoints 4 
+(gdb) i b
+Num     Type           Disp Enb Address            What
+4       breakpoint     keep n   0x0000000000408d60 in test_scanner_hello_Test::TestBody() at /home/sun/src/my_compiler/mytest/test_scanner.cc:10
+
+#+end_src
+
+** 重新启用断点
+#+begin_src 
+(gdb) enable 4
+(gdb) i b 
+Num     Type           Disp Enb Address            What
+4       breakpoint     keep y   0x0000000000408d60 in test_scanner_hello_Test::TestBody() at /home/sun/src/my_compiler/mytest/test_scanner.cc:10
+#+end_src
+
+** 删除断点
+用断点序号指定要删除的断点
+#+begin_src gdb
+(gdb) delete breakpoints 1
+#+end_src
+
+
+** 保存断点到文件
+这个功能本身很简陋, 使用前提是源代码不能修改过.
+save breakpoints myfile
+
+恢复断点:
+source <myfile>
+
+
+
+
+** 单步跳过 next
+不会进入函数内部.
+
+** 继续执行, 直至遇到断点 
+continue
+
+** 运行到某处,忽略期间的断点
+
+until <N行> 运行下面N行, 忽略之间的断点.
+
+** 进入到函数内部
+step
+
+** 从函数中跳出并暂停
+finish
+
+
+
+** 强制从函数中返回特定值
+return 
+相当于一种特殊的jump, 并不会将函数体执行完.并指定一个返回值
+** 跳转到指定位置继续执行
+jump linenum 
+
+跳转后不会自动暂停, 需要断点.
+
+** 显示当前所有的局部变量
+info loacls
+** 变量/表达式相关
+
+*** 打印变量/表达式
+#+begin_src gdb 
+(gdb)  print tk.kind_
+$2 = mycompiler::Token::INT
+#+end_src
+
+*** 自动显示变量值
+display
+每次都将这些变量的值打印处理.
+
+#+begin_src 
+(gdb) info display
+Auto-display expressions now in effect:
+Num Enb Expression
+1:   y  tk.kind_
+#+end_src
+
+*** 取消对变量的自动显示
+undisplay + N
+
+
+
+
+
+*** 显示变量/表达式类型
+用what/whatis
+#+begin_src gdb
+(gdb) what tk.kind_
+type = mycompiler::Token::Kind
+(gdb) what 1+3
+type = int
+(gdb) whatis tk.kind_
+type = mycompiler::Token::Kind
+#+end_src
+
+*** 修改变量的值
+可以在不修改源码的情况下对一些值进行设置.
+
+#+begin_src 
+(gdb) set var tk.kind_ = mycompiler::Token::END
+#+end_src
+
+
+
+*** 监视某变量的值
+只要这个值发生改变就会自动暂停,并显示新值和旧值.
+
+watch tk.kind_
+
+
+显示所有watchpoints
+info watchpoints
+
+
+
+
+** 栈相关
+
+*** 显示堆栈信息: bt
+
+
+
+*** 切换栈帧
+up/down: 上一层栈帧/下一层栈帧
+
+frame N 切换到指定栈帧中
+
+
+** 调试已经运行的程序
+
+首先需要获得其进程pid
+
+attach PID
+
+detach
+
+
+** 检查点
+通过fork出新的进程来保存当前运行位置和状态.
+
+*** 在当前位置添加checkpoint
+checkpoint 
+
+
+*** 查看所有checkpoints
+info checkpoints
+
+
+*** 删除指定checkpoint
+
+delete checkpoint N
+
+
+
+
+
+
+** 线程 
+
+*** 显示所有线程 
+info threads
+
+*** 切换到指定线程
+thread N
+
+
+
+
+
+
+** 以指定格式显示某地址处的内容
+
+x/格式+长度 <地址>
+
+
+
+** 反向运行
+
+记录反向运行所需信息
+
+target record-full 
+
+
+reverse-next
+reverse-XXX
+
+
