--- a/how-to-learn.org
+++ b/how-to-learn.org
@@ -118,3 +118,13 @@ eg: 若有 X --> Y, 即: X依赖于Y
 (...body...)
 (返回 X )
 )
+
+
+* zhihu 卞舒言 
+
+我是野路子出身,编程入门用的就是SICP,只是看书,花了三个月把第一章看完了,第一章习题也写完了,第二章最后的习题太困难,我现在看来相当于要你设计一个面向对象系统,然后又把这种系统的一般难点抛了出来,第三章跳过了并发,结果流也没有看完,因为当时完全不懂电子学和微分方程(当时我数学分析也不会),第四章开始因为抽象太多,然后就放弃了,花了两个星期读完了The Little Schemer,然后又开始读EoPL,读了两章,写完了两章习题,然后花了三天读完了The Seasoned Schemer,然后又花了六个月在The Reasoned Schemer和逻辑式语言上,然后又开始把EoPL第3,4章读完了,第5章多线程之前结束,然后又读了一部分SICP第4章和第5章,又开始做IU C311习题,接着把EoPL第6,7,5章看完了,然后就开始写IU P423编译器作业,15次作业写了8-15,1-3还差4-7.这是我一年半的自学情况.
+htdp我也翻看过,写的不好,我最反感的就是废话夹杂,太拖沓,像菲赫金哥尔茨的微积分教程,1800多页,没一句是废话,很引人入胜,SICP页数虽然不算太少,但也很引人入胜.
+我没学过算法,我的算法水平远不如科班的,PL用函数式语言入门当然是有益的,像Utah曾经的PL讲义就是拿ISWIM说事(但说实话,ISWIM也没什么特点,当作奇怪语法的Scheme变种也未尝不可,关键还是怎么阐释语义),编译器领域,Scheme写编译器写的爽啊,虽然当然这么写很不符合工程规范啊,就直接拿一个模式匹配的宏对AST变换来变换去,也没什么自动的检查机制,全靠眼力脑力检查.(RABBIT编译器也是这么干的)结论就是算法方面没什么裨益,但是PL和compiler还是很有好处的.
+SICP确实课时过少,但也没有多少学校上这个课,说实话,一个学期的课就是用来开开眼界的.SICP也不难,还很有趣.
+我就把Racket当Scheme用用,滑铁卢估计是按照HTDP式的讲法来的,而且,估计以后可能都不会用Racket了,像PLAI主页上说第三版应该也不会用Racket了,还展示了一个htdp风格但没有用Racket的讲义.
+SICP本身是面向初学者的,但是非初学者也可以欣赏它而不会感觉无聊.
