--- a/compiler.org
+++ b/compiler.org
@@ -27,6 +27,7 @@ scope 是规定了标识符在程序中可访问的范围.
   }
 #+end_src
 
+
 ** Static Scope  VS  Dynamic Scope
 
 大多数语言采用静态作用域, 即作用域只依赖程序的文本, 而不是运行时的行为. 
@@ -90,6 +91,7 @@ d1  d2  d3    s1   s2  s3
 
 这种context是什么?
 
+
 *** 符号表 symbol table 
 
 之所以叫做符号表,而不是"字符串"表, 是因为这个表的key不单单是一个字符串.
@@ -100,6 +102,7 @@ d1  d2  d3    s1   s2  s3
 每当进入一个新的作用域时, 将当前的符号表复制一份作为当前scope的符号表.并将旧的保存下来. 每当下面遇到一个声明, 将其添加到符号表.
 
 当离开一个scope后, 将保存的符号表恢复为当前符号表.
+
 
 **** 用符号表实现"环境" 
 
@@ -124,9 +127,188 @@ d1  d2  d3    s1   s2  s3
 
 
 
-* 活动记录 AR
+* 活动记录 AR 
 
-** 概览
+** 理论动机
+
+所谓函数是一段代码, 位于代码段, 是只读的.
+但是每个函数被调用时都包含着对应当前实例的特有数据: 入参, 局部变量, 中间结果 ...
+这些数据是运行时动态创建的, 不能放在代码段中. 因此需要有某种数据结构来管理每个函数调用对应的特有数据.这种结构就是栈stack.
+
+一门语言中的函数的语法决定了如何实现函数调用.
+比较复杂的函数实现就是所谓的高阶函数: 入参和返回值都可以是函数.
+并且为了支持能够返回一个函数对象, 语法也必须支持嵌套的函数定义.
+这些函数的特性增加了实现的难度:
+
+#+begin_src ocaml
+   let myfunc x = 
+     let
+       bar y = x + y 
+     in 
+     bar 
+   ;;
+#+end_src
+
+#+begin_src ocaml
+  # let bar =myfunc 2 ;;
+  val bar : int -> int = <fun>
+#+end_src
+
+为了实现上的简单, 暂时不考虑返回一个函数对象的情况. 仅允许嵌套函数定义.
+
+
+
+这里的栈不是标准的栈 -- 仅支持push/pop/peek.
+因为要访问变量, 因此要实现为数组.并用一个指针来标记栈顶, 即栈指针sp.
+这个数组是从高地址向低地址方向生长的.就像山洞中的钟乳石.
+
+存放于栈的每个函数调用对应的特有数据被称为一个frame.
+一个栈帧中通常包含这些部分:
+入参,函数内声明的局部变量,返回地址,计算的中间结果,保存的寄存器.
+
+某些局部变量不放在寄存器中, 而是存放于stack中, 这些被占用的寄存器可能会与该函数调用的其他函数相冲突. 因此需要将其保存栈中.
+
+
+
+*** frame指针
+
+frame指针的存在通常是为了变长的函数frame.
+因为函数的返回需要退回栈顶指针sp,但是要退回到何处呢? 这就需要使用frame指针fp来标记一个frame的开始位置.
+#+begin_src ocaml
+  let f x =
+    g x
+  ;;
+#+end_src
+例如 f 调用了 g.
+调用前首先要保存f的fp, 然后将其fp修改为当前的sp.
+
+当g返回时, 将sp置为当前的fp, 并取出保存的fp将其设置为当前fp. 
+
+#+begin_src 
+      高
+    ______
+   | f的  |
+   | 栈帧 |
+   |______|
+   | g的  |
+   | 栈帧 |
+   |______|
+  
+      低
+#+end_src
+当函数的栈帧大小固定时, 为了方便也仍然需要fp.
+因为临时变量(中间结果)和保存的寄存器这些信息要到整个编译阶段的末尾才被计算出来.
+这就意味着sp尚未确定, 因此不能只靠sp来索引入参/局部变量.
+而入参/局部参数就在fp周围, 因此使用fp进行索引是很方便的.
+
+
+
+*** 保存寄存器
+
+同一寄存器可能会被不同函数使用, 例如 f调用g,而它们都使用了1号寄存器来存放入参.
+
+因此这个寄存器在调用的前或后需要被保存起来.防止f的参数被覆盖.
+
+到底是调用者还是被调者进行保存是根据约定来的, 寄存器被分成两类,
+ ~caller-save~ , ~callee-save~ .
+冲突的寄存器由谁进行保存要查阅寄存器的约定使用方式.
+
+因为保存&恢复寄存器涉及到两次内存的访问, 因此要避免不必要的寄存器保存.
+若冲突的寄存器在被调用函数返回后不再被使用,那么就没有必要保存它.
+
+寄存器分配将负责决定局部变量&临时变量该位于哪种保存类型的寄存器.
+
+
+
+
+
+*** 优化参数传递
+
+就像上节中举的例子, f(x)调用g(x)会发生寄存器的冲突, 因此最简单的方案是保存&恢复冲突的寄存器.
+
+但是这种方案会增加内存的存取次数, 对性能不利. 有没有方案可以避开寄存器冲突呢?
+
++ 内联叶子过程:
+  
+  不为叶子过程分配栈帧, 自然也就没有入参冲突.
+  
++ 识别dead参数
+  
+  不去保存那些在被调函数返回后无用的参数
+  
++ 过程间寄存器分配:
+  
+  全局分析所有函数, 用不同的寄存器来避开冲突的入参传递.
+  
++ 机器体系结构支持多组寄存器
+
+
+入参一部分存放在寄存器中, 另一部分存放在栈中.
+对寄存器参数来说, 需要很多额外的处理: 
+
+
+如何获取入参的地址?
+
+对于后者,取地址是容易. 如何取寄存器参数中的地址呢?
+可以识别这些被取了地址的变量, 然后将其紧挨着栈中参数存放.
+亦或是为所有寄存器参数都保留栈中的空间.但不写入内容.
+
+
+
+*** 返回地址
+返回地址由call保存到指定寄存器中,
+
+对于非叶子过程, 因为它仍要调用其他函数, 会覆盖掉寄存器中的返回地址, 因此它需要额外将返回地址存入stack中.
+对于叶子节点,则无需额外将返回地址stack中, 因为寄存器中的返回地址不会被覆盖. 
+
+
+*** 驻留frame中的变量
+
+
+
+对于局部变量和中间结果, 应该优先将他们存入寄存器. 只有迫不得已时才存入栈中.
+
++ 该变量被取过地址.
++ 该变量是一个数组, 本质上也要取其地址.
++ 该变量的值过大, 无法存入寄存器.
++ 溢出: 局部变量&临时变量太多, 无法全都存入寄存器
++ 此变量被嵌套定义的内层函数使用.
++ 此变量要让出占用的寄存器时, 可能会被临时保存到stack中. 
+
+为这种变量取个名字:
+
+*逃逸变量*: 
+该变量为传地址实参/ 被取了地址 / 被内层函数访问.
+
+逃逸变量必须分配在stack中!(逃脱了寄存器)
+在首次遇到变量声明时无法确定是否是逃逸变量.
+因此很多编译器先将所有变量分配到栈中, 之后的pass再决定是否能放入寄存器.
+
+
+
+
+
+*** 静态链
+
+静态链主要是为了支持嵌套的函数定义.
+内层函数有可能会直接使用外层函数中的局部变量.
+因此需要一个方法能在内层函数中访问外层函数的栈帧.
+
+可以为每个函数传入一个额外的参数, 此参数指向外层定义的函数(栈帧)
+
+#+begin_src ocaml
+  let myfunc x = 
+     let
+       bar y = x + y 
+     in 
+     (bar 100)
+  ;;
+#+end_src
+
+调用 bar 时要额外传入一个参数, 它指向myfunc的栈帧. 
+
+
+** frame概览
 
 高阶函数 -> 嵌套定义的函数 -> 逃逸变量(内存中) -> 静态链访问
 
@@ -159,6 +341,8 @@ d1  d2  d3    s1   s2  s3
 
 ~Semant + lev~ -> ~Translate.allocLocal lev esc~ -> ~Frame.allocLocal~ 
 ==> 返回 access
+
+
 
 ** 实现思路
 
@@ -338,7 +522,7 @@ Tiger编译器的栈帧
 实现这点是很容易的, 为transDec增加额外的参数, 代表了当前的level. 并且也为transExp增加一个level参数, 这样当遇到一个函数声明时便可将level传递给 transDec.
 
 transVar 也需要添加一个表示当前level的参数, 因为要通过计算level的差来决定访问几次静态链. 
-
+ 
 
 * 中间表示
 
@@ -440,3 +624,7 @@ transVar 也需要添加一个表示当前level的参数, 因为要通过计算l
       end
     | Nx s -> T.Eseq s (T.Const 0)
 #+end_src
+
+
+
+
