--- a/index.org
+++ b/index.org
@@ -14,3 +14,4 @@
 ** [[./ocaml-book/ocaml-book.org][OCaml杂记]]
 ** [[./rust/rust.org][Rust杂记]]
 ** [[./rust/crust-of-rust/lifetime.html][crust-of-rust:生命周期]]
+** [[./compiler.org][虎书]]
