--- a/index.org
+++ b/index.org
@@ -15,3 +15,7 @@
 ** [[./rust/rust.org][Rust杂记]]
 ** [[./rust/crust-of-rust/lifetime.html][crust-of-rust:生命周期]]
 ** [[./compiler.org][虎书]]
+
+** [[./sys-prog.org][系统编程]]
+
+
